SubBt/force-app/main/default/objects/Project__c/fields/Project_NOS__c.field-meta.xml
<CustomField>
    <fullName>Project_NOS__c</fullName>
    <label>Project NOS</label>
    <type>TextArea</type>
</CustomField>