SubBt/force-app/main/default/objects/Project__c/fields/Project_Number_Formula__c.field-meta.xml
<CustomField>
    <fullName>Project_Number_Formula__c</fullName>
    <formula>&apos;PR-&apos;&amp;Auto_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project #</label>
    <type>Text</type>
</CustomField>