SubBt/force-app/main/default/objects/Project__c/fields/Project_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_Tax_Rate__c</fullName>
    <inlineHelpText>Global Tax Rate that will be used for this Project on items like PO, CO, Contracts and other items that require a Tax Rate.</inlineHelpText>
    <label>Project Tax Rate %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>