SubBt/force-app/main/default/objects/Project__c/fields/Project_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Project_Tiers__c</fullName>
    <label>Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Bronze</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>