SubBt/force-app/main/default/objects/Project__c/fields/quickbooksID__c.field-meta.xml
<CustomField>
    <fullName>quickbooksID__c</fullName>
    <label>quickbooksID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>