SubBt/force-app/main/default/objects/Project__c/fields/Quote_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>