SubBt/force-app/main/default/objects/Project__c/fields/Regional_Factor__c.field-meta.xml
<CustomField>
    <fullName>Regional_Factor__c</fullName>
    <label>Regional Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>