SubBt/force-app/main/default/objects/Project__c/fields/Source_Project__c.field-meta.xml
<CustomField>
    <fullName>Source_Project__c</fullName>
    <label>Source Project</label>
    <type>TextArea</type>
</CustomField>