SubBt/force-app/main/default/objects/Project__c/fields/Total_Sq_Feet__c.field-meta.xml
<CustomField>
    <fullName>Total_Sq_Feet__c</fullName>
    <label>Total Sq. Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>