SubBt/force-app/main/default/objects/Project__c/fields/Use_PA_Type__c.field-meta.xml
<CustomField>
    <fullName>Use_PA_Type__c</fullName>
    <label>Use PA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Budget Lines</fullName>
            </value>
            <value>
                <fullName>SOVs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>