SubBt/force-app/main/default/objects/Project__c/fields/What_Time_Can_We_Start__c.field-meta.xml
<CustomField>
    <fullName>What_Time_Can_We_Start__c</fullName>
    <label>What Time Can We Start?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>