SubBt/force-app/main/default/objects/Project__c/fields/Where_can_we_store_tools__c.field-meta.xml
<CustomField>
    <fullName>Where_can_we_store_tools__c</fullName>
    <label>Where can we store tools?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>