SubBt/force-app/main/default/objects/Project__c/fields/Where_is_the_main_water_shut_off_located__c.field-meta.xml
<CustomField>
    <fullName>Where_is_the_main_water_shut_off_located__c</fullName>
    <label>Where is the main water shut off located</label>
    <length>250</length>
    <type>Text</type>
</CustomField>