SubBt/force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Stage__c</columns>
    <columns>Contract_Amount__c</columns>
    <columns>Estimated_Completion_Date__c</columns>
    <columns>Address__c</columns>
    <columns>City__c</columns>
    <columns>State__c</columns>
    <columns>County__c</columns>
    <columns>Zip__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Stage__c</field>
        <operation>equals</operation>
        <value>Construction</value>
    </filters>
    <label>Active Projects</label>
</ListView>