SubBt/force-app/main/default/objects/Project__c/listViews/Open_Projects.listView-meta.xml
<ListView>
    <fullName>Open_Projects</fullName>
    <columns>NAME</columns>
    <columns>Administrator__c</columns>
    <columns>Actual_Completion_Date__c</columns>
    <columns>Actual_Start__c</columns>
    <filterScope>Mine</filterScope>
    <label>Open Projects</label>
</ListView>